--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,35 @@ body {
   padding: 0;
   list-style: none !important;
 }
+
+
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, .3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+
+  transition: .5s ease-in-out all;
+
+  * {
+    color: black
+  }
+  .inner {
+    background: white;
+    border-radius: 12px;
+    padding: 20px;
+    width: 25%;
+    height: 50%;
+  }
+}
+
+.modal.active {
+  pointer-events: all;
+  transition: .5s ease-in-out all;
+  opacity: 1;
+}
